--- a/public/javascripts/components/enterSerial/enterSerial.html
+++ b/public/javascripts/components/enterSerial/enterSerial.html
@@ -14,7 +14,7 @@
                             <option value="newstudio">NewStudio</option>
                         </select>
                     </div>
-                    <button class="btn btn-primary btn-block" ng-click="ctrl.send()">Submit</button>
+                    <button class="btn btn-primary btn-block" ng-click="ctrl.send()">Найти</button>
                 </form>
             </div>
         </div>
