--- a/views/pages/waiting.ejs
+++ b/views/pages/waiting.ejs
@@ -1,8 +1,9 @@
-<div id="waiting" ng-show="false">
-    <div class="waiting-block">
-        <div class="window-block">
-            <h2 style="text-align: center">Подождите...</h2>
+<div id="waiting" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" style="margin-top: 40%">
+            <div class="window-block col-xs-6 col-xs-offset-4">
+                <h2 style="text-align: center">Подождите...</h2>
+            </div>
         </div>
     </div>
-    <div class="modal-backdrop fade in"></div>
 </div>
