--- a/public/javascripts/components/navbar/navbar.html
+++ b/public/javascripts/components/navbar/navbar.html
@@ -1,44 +1,57 @@
-<ul class="nav navbar-nav navbar-right" ng-if="!ctrl.user">
-    <li><a href="" ng-click="ctrl.loginWindow('show')">
-        Login
-    </a></li>
-</ul>
-<ul class="nav navbar-nav navbar-right" ng-if="ctrl.user">
-    <li><a ng-href="{{ctrl.user.profileUrl}}" target="_blank">
-        <img ng-src="{{ctrl.user.cover}}" class="avatar-min">
-        <span>{{ctrl.user.name}}</span>
-    </a></li>
-    <li><a href="/auth/logout">
-        Logout
-    </a></li>
-</ul>
+<nav class="navbar navbar-fixed-top navbar-inverse navbar-inner">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">SeAg</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
 
-<div id="loginWindow" style="display: none">
-    <div class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="Login" style="display: inherit;margin-top: 15%">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="ctrl.loginWindow('hide')"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Login</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="col-xs-2">
-                        <a class="btn btn-social-icon btn-lg btn-facebook" href="/auth/facebook">
-                            <span class="fa fa-facebook"></span>
-                        </a>
-                    </div>
-                    <a class="btn btn-social-icon btn-lg btn-twitter" href="/auth/twitter">
-                        <span class="fa fa-twitter"></span>
-                    </a>
-                    <a class="btn btn-social-icon btn-lg btn-google" href="/auth/google">
-                        <span class="fa fa-google"></span>
-                    </a>
-                    <a class="btn btn-social-icon btn-lg btn-vk" href="/auth/vk">
-                        <span class="fa fa-vk"></span>
-                    </a>
-                </div>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" ng-if="!ctrl.user">
+                <li><a href="" data-toggle="modal" data-target="#loginWindow">
+                    Войти
+                </a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" ng-if="ctrl.user">
+                <li><a ng-href="{{ctrl.user.profileUrl}}" target="_blank">
+                    <img ng-src="{{ctrl.user.cover}}" class="avatar-min">
+                    <span>{{ctrl.user.name}}</span>
+                </a></li>
+                <li><a href="/auth/logout">
+                    Выйти
+                </a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="modal fade in" tabindex="-1" role="dialog" aria-labelledby="Login" id="loginWindow" style="margin-top: 15%">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Войти с помощью</h4>
+            </div>
+            <div class="modal-body">
+                <a class="btn btn-social-icon btn-lg btn-facebook" href="/auth/facebook">
+                    <span class="fa fa-facebook"></span>
+                </a>
+                <a class="btn btn-social-icon btn-lg btn-twitter" href="/auth/twitter">
+                    <span class="fa fa-twitter"></span>
+                </a>
+                <a class="btn btn-social-icon btn-lg btn-google" href="/auth/google">
+                    <span class="fa fa-google"></span>
+                </a>
+                <a class="btn btn-social-icon btn-lg btn-vk" href="/auth/vk">
+                    <span class="fa fa-vk"></span>
+                </a>
             </div>
         </div>
     </div>
-    <div class="modal-backdrop fade in" style="display: inherit"></div>
 </div>
