--- a/public/javascripts/components/series/series.html
+++ b/public/javascripts/components/series/series.html
@@ -28,19 +28,23 @@
                             </div>
                         </div>
                         <h4>Сменить провайдера</h4>
-                        <div class="col-xs-6">
-                            <select class="form-control" ng-model="ctrl.provider">
-                                <option value="coldfilm">ColdFilm</option>
-                                <option value="lostfilm">LostFilm</option>
-                                <option value="newstudio">NewStudio</option>
-                            </select>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <select class="form-control" ng-model="ctrl.provider">
+                                    <option value="coldfilm">ColdFilm</option>
+                                    <option value="lostfilm">LostFilm</option>
+                                    <option value="newstudio">NewStudio</option>
+                                </select>
+                            </div>
+                            <div class="col-xs-2">
+                                <button class="btn btn-primary" ng-click="ctrl.changeProvider(ctrl.provider)">Сменить</button>
+                            </div>
                         </div>
-                        <div class="col-xs-2">
-                            <button class="btn btn-primary" ng-click="ctrl.changeProvider(ctrl.provider)">Сменить</button>
-                        </div>
-                        <footer class="footer">
+                        <p class="text-danger" ng-if="ctrl.error">{{ctrl.error}}</p>
+                        <br>
+                        <div>
                             <button class="btn btn-primary btn-block" ng-click="ctrl.next()">Предыдущая серия</button>
-                        </footer>
+                        </div>
                     </div>
                 </div>
             </div>
